# flask-gcp-gitlab-omdb-poc

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  TODO  docker-compose.yaml  entrypoint.sh  goal.txt  goals.md  manage.py  poc.py  pyproject.toml  wsgi.py
omdb-poc/: app.py  omdb.py
omdb-poc/routes/: index.py
poc/: api.py  app.py
src/: app.py  config.py  db.py  main.py  manage.py  omdb.py
src/models/: base.py  movies.py  users.py
src/repositories/: base.py  movies.py  users.py
src/routes/: index.py  movies.py  utils.py
src/services/: base.py  movies.py  users.py
tests/: conftest.py
tests/functional/: test_hello_world.py  test_movies.py
tests/unit/: test_models.py
